# CProjectTemplate

./: CMakeLists.txt  Kconfig  Makefile  build.cmake
scripts/: compiler_and_link_flags.cmake
src/: bug.h  main.c  panic.c  specials.c  warn.h
src/logging/: logging.c
src/stacktrace/provider/: libbacktrace.c
src/util/: util.c  util.h
